[STR-1365] added geoname-ids filter
