# pkg/entity/geonames.go
@@ -154,6 +154,7 @@ func (s *GeoName) UnmarshalJSON(data []byte) error {
 }
 
 type GeoNameFilter struct {
+	GeoNameIDs   []uint32 `schema:"geoname-ids"`
 	CountryCodes []string `schema:"country-code"`
 	NamePrefix   string   `schema:"name-prefix"`
 	Limit        uint32   `schema:"limit"`
